[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-sgraal"
version = "0.1.0"
description = "LangChain integration for Sgraal memory governance protocol"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Sgraal", email = "hello@sgraal.com" }]
keywords = ["sgraal", "langchain", "langgraph", "ai", "memory", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28.0", "pydantic>=2.0.0", "langchain-core>=0.1.0"]

[project.urls]
Homepage = "https://sgraal.com"
Repository = "https://github.com/sgraal-ai/sdks"

[tool.setuptools.packages.find]
include = ["langchain_sgraal*"]
