[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem0-sgraal"
version = "0.1.0"
description = "Sgraal memory governance integration for mem0"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Sgraal AI", email = "hello@sgraal.com"}]
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0", "mem0ai>=0.1.0", "sgraal>=0.2.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://sgraal.com"
Repository = "https://github.com/sgraal-ai/sdks"
Documentation = "https://api.sgraal.com/docs"
